--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/lodash": "^4.14.194",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.11",
+    "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
