--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "ES6",
+      "target": "ESNext",
       "module": "commonjs",
       "outDir": "./dist",
       "rootDir": "./src",
@@ -9,5 +9,5 @@
       "skipLibCheck": true
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "dist"]
   }
