--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mqtt": "^2.5.0",
     "@types/node-cron": "^3.0.7",
     "@types/winston": "^2.4.4",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
     "cors": "^2.8.5",
@@ -27,7 +28,7 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.0.4",
     "mqtt": "^4.3.7",
-    "node-cron": "^3.0.2",
+    "node-cron": "^3.0.3",
     "socket.io": "^4.7.2",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.13.1",
